--- a/style.css
+++ b/style.css
@@ -1,51 +1,18 @@
-body {
-	font-family: Open Sans, Arial, sans-serif;
-	font-size: 1em;
-	color: #444;
-	font-weight
-}
-/* Top of the page */
-#name {
-	  font-size: 3em;
-	  color: #33485e;
-	  text-transform:  uppercase;
-}
-
-img {
-     display: none;
-}
-
-b {
-	text-transform:  uppercase;
-	font-size: 1.5em;
-	color: #33485e;
-}
-
-/* Sections */
-h2  {
-	font-size: 1.5em;
-	text-transform: uppercase;
-	background-color: #33485e;
-	color: white;
-	font-weight: 400;
-}
-
-h3 {
-	font-weight: 600;
-	font-size:  1.5em;
-}
-
-h4 {
-	font-weight:  400;
-	font-size:  1.5em;
-}
-
-h6  {
-	font-weight:  400;
-	font-stlye:  italic;
-	font-size:  1em;
+#content {
+  font-family: sans-serif;
+  font-size: large;
+  margin: 0 auto;
+  width: 900px; 
 } 
 
-ul li{
-	font-size:  1em;
-}
+blockquote {
+font: 16px/24px normal helvetica, sans-serif; 
+font-style: italic; 
+margin-top: 15px; 
+margin-bottom: 15px; 
+color: red; 
+margin-left: 50px; 
+padding-left: 15px; 
+border-left: 4px solid #ccc; 
+} 
+
